--- a/fe-expedientes/tsconfig.json
+++ b/fe-expedientes/tsconfig.json
@@ -12,7 +12,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": [
-        "./src/*"
+        "./src/*",
+        "src/vite-env.d.ts"
       ]
     }
   }
