--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "knex": "^3.1.0",
     "lovable-tagger": "^1.1.8",
     "multer": "^2.0.2",
-    "mysql2": "^3.14.2",
+    "mysql2": "^3.14.3",
+    "openai": "^5.15.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1"
   }
