--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^24.0.15",
-    "@vitejs/plugin-react-swc": "^3.11.0"
+    "@vitejs/plugin-react-swc": "^3.11.0",
+    "knex": "^3.1.0"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -20,7 +21,6 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "knex": "^3.1.0",
     "lovable-tagger": "^1.1.8",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
