--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "lovable-tagger": "^1.1.8",
+    "mammoth": "^1.11.0",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
-    "openai": "^5.15.0",
+    "openai": "^5.23.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "util": "^0.12.5"
