--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mammoth": "^1.11.0",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
-    "openai": "^5.23.0",
+    "openai": "^6.7.0",
+    "pdf-parse": "^2.4.5",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "util": "^0.12.5"
