--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonrepair": "^3.13.1",
     "jsonwebtoken": "^9.0.2",
     "lovable-tagger": "^1.1.8",
     "mammoth": "^1.11.0",
