--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "canvas": "^3.2.0",
     "child_process": "^1.0.2",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "form-data": "^4.0.0",
     "jsonrepair": "^3.13.1",
     "jsonwebtoken": "^9.0.2",
     "lovable-tagger": "^1.1.8",
@@ -28,11 +30,12 @@
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
     "node-fetch": "^2.6.7",
-    "form-data": "^4.0.0",
     "openai": "^6.7.0",
     "pdf-parse": "^2.4.5",
+    "pdf2json": "^4.0.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "uuid": "^13.0.0"
   }
 }
